# lame-encoder

./: .gitmodules  CMakeLists.txt
converter/: main.cpp
converter.xcodeproj/: project.pbxproj
src/: Executor.cpp  Executor.h  Mp3Encoder.cpp  Mp3Encoder.h  Task.cpp  Task.h  WavFileReader.cpp  WavFileReader.h  main.cpp
